# topd

./: .travis.yml  Cargo.toml  RELEASE.md  build.sh
src/: main.rs  server.rs  util.rs
src/assets/: .gitignore  bundle.js
src/sensors/: cpu.rs  disk.rs  memory.rs  mod.rs  net.rs  processes.rs
ui/: .babelrc  gulpfile.js  package.json  tsconfig.json  webpack.common.js  webpack.config.js  webpack.dev.js  webpack.prod.js
ui/src/: index.html  main.js  main.tsx
ui/src/app/: TopApp.js  TopApp.tsx  UsageComponent.tsx  reducers.js  reducers.ts
ui/src/cpu/: CpuHistoryComponent.js  CpuUsageComponent.js  CpuUsageComponent.tsx
ui/src/disk/: DiskUsageComponent.js  DiskUsageComponent.tsx
ui/src/history/: HistoryComponent.js  HistoryComponent.tsx
ui/src/load/: LoadAvgComponent.js  LoadAvgComponent.tsx
ui/src/memory/: MemoryUsageComponent.js  MemoryUsageComponent.tsx
ui/src/net/: NetUsageComponent.js  NetUsageComponent.tsx
ui/src/processes/: ProcessesComponent.js  ProcessesComponent.tsx
ui/src/style/: style.css
