[package]
name = "topd"
version = "1.0.4-pre"
authors = ["Manuel Woelker <github@manuel.woelker.org>"]
description = "A remote top daemon"
license = "MIT/Apache-2.0"
repository = "https://github.com/manuel-woelker/topd"

[dependencies]
libc = "0.2.8"
mount = "0.1.0"
mime = "0.2.1"
time = "0.1.34"
procinfo = "0.1.1"
serde = "0.7.0"
serde_json = "0.7.0"
toml = "0.1.28"
num_cpus = "0.2.11"

[dependencies.iron]
version = "0.3.0"
