[package]
authors = ["Manuel Woelker <github@manuel.woelker.org>"]
description = "A remote top daemon"
license = "MIT/Apache-2.0"
name = "topd"
repository = "https://github.com/manuel-woelker/topd"
version = "1.3.2-alpha.0"

[profile.release]
lto = true
panic = 'abort'


[dependencies]
ifaces = "0.1.0"
iron = "0.5.1"
libc = "0.2.30"
mime = "0.2"
mount = "0.3.0"
num_cpus = "1.6.2"
procinfo = "0.4.2"
serde = "1.0.12"
serde_derive = "1.0.12"
serde_json = "1.0.3"
sys-info = "0.5.1"
time = "0.1.38"
toml = "0.4.5"

